--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   mobile_scanner: ^7.0.1
+  supabase_flutter: ^2.10.1
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +52,7 @@ dev_dependencies:
   flutter_native_splash: ^2.2.16  
   intl: ^0.19.0
   qr_flutter: ^4.1.0
+  flutter_dotenv: ^5.0.2
 
 
 # For information on the generic Dart part of this file, see the
