--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   mobile_scanner: ^7.0.1
   supabase_flutter: ^2.10.1
   flutter_dotenv: ^6.0.0
+  go_router: ^16.2.4
 
 dev_dependencies:
   flutter_test:
