--- a/linux/.gitignore
+++ b/linux/.gitignore
@@ -1,1 +1,5 @@
 flutter/ephemeral
+# Firebase config
+lib/firebase_options.dart
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
