--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   supabase_flutter: ^2.10.1
   flutter_dotenv: ^6.0.0
   go_router: ^16.2.4
+  firebase_core: ^4.2.0
 
 dev_dependencies:
   flutter_test:
